# beverage

./: .gitignore  Cargo.toml  README.md  commentary.md  rationale.md
assets/locales/en-US/: interface.ftl  main.ftl.ron
assets/locales/fr-FR/: interface.ftl  main.ftl.ron
bruno/BRP/: InsertTransform.bru  bruno.json
examples/: sickle_editor.rs
examples/remote/: camera_control.rs  client.rs  scene.rs  server.rs
src/: a11y.rs  activity.rs  asset.rs  construct.rs  framework.rs  history.rs  input.rs  l10n.rs  layout.rs  lib.rs  locale.rs  logging.rs  main.rs  remote.rs  router.rs  service.rs  setup.rs  sickle-editor.rs  signals.rs  theme.rs  widget.rs
src/demo/: camera_control.rs  mod.rs
src/demo/camera_control/: remote.rs  widget.rs
src/demo/quill/: widget.rs
src/framework/: mod.rs
src/layout/: editor.rs  footer.rs  mod.rs  root.rs
src/layout/page/: camera_control.rs  mod.rs
src/remote/: brp_client.rs  builtin_verbs.rs  camera_control.rs  client.rs
src/remote/plugin/: camera_control.rs
src/setup/: menu.rs  mod.rs
src/widget/: camera_control.rs
