[package]
name = "beverage"
description = "Hypothetical Editor for Bevy. Also available as a t-shirt."
version = "0.1.0"
repository = "https://github.com/knutsoned/beverage"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking", "serialize"] }

# for debug inspector feature
bevy_dev_tools = { version = "0.14", optional = true }

# editor core (Rust)
anyhow = "1"
futures-lite = "2.3.0"
futures-signals = "0.3.33"
native-dialog = "0.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# editor core (Bevy ecosystem)
aery = { version = "0.7.3" }
bevy_defer = { version = "0.12.1" }
bevy_simple_text_input = { version = "0.8.0" }
leafwing-input-manager = { version = "0.14.0", git = "https://github.com/LeafWing-Studios/leafwing-input-manager", branch = "v0.14-rc" }

# FPS widget demo
sickle_example = { version = "0.2.0", git = "https://github.com/knutsoned/sickle_example" }

# revisit how this all works
#bevy-async-ecs = { version = "0.6.0", git = "https://github.com/knutsoned/bevy-async-ecs" }
#haalka = { version = "0.2.0", path = "../haalka" } # git = "https://github.com/knutsoned/haalka"

# this is a placeholder (just a reminder to find or build a non-egui thing like this)
#bevy_console = { version = "0.12.0", git = "https://github.com/knutsoned/bevy-console" }


# should be behind a scripting feature
#bevy_mod_scripting = "0.6.0"

# sickle is now compatible with 0.14.0
#
# when 0.14.0 comes out, there will be an official crate release
sickle_ui = { version = "0.2.0", git = "https://github.com/UmbraLuminosa/sickle_ui" }
sickle_macros = { version = "0.2.0", git = "https://github.com/UmbraLuminosa/sickle_ui" }
sickle_math = { version = "0.2.0", git = "https://github.com/UmbraLuminosa/sickle_ui" }
sickle_ui_scaffold = { version = "0.2.0", git = "https://github.com/UmbraLuminosa/sickle_ui" }

# i18n
bevy_fluent = { version = "0.10" }
fluent_content = "0.0.5"
unic-langid = { version = "0.9", features = ["macros"] }

# bevy_remote (BRP) core deps
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
macro_rules_attribute = "0.2.0"
smol = "2"
smol-hyper = "0.1"
smol-macros = "0.1"

# BRP basic client example
argh = "0.1.12"

# BRP camera control example (not sure we really need this)
ehttp = "0.5.0"

# app icon
#image = "0.25.1"
#winit = "0.30.3"

[dev-dependencies]
argh = "0.1.12"

[features]
default = [ "bevy_dev_tools" ]
bevy_dev_tools = ["dep:bevy_dev_tools"]

[[example]]
name = "camera_control"
path = "examples/remote/camera_control.rs"
doc-scrape-examples = true

[package.metadata.example.camera_control]
name = "camera_control"
description = "A simple GUI client that can control a remote Bevy camera via the BRP"
category = "Remote Protocol"
wasm = true

[[example]]
name = "client"
path = "examples/remote/client.rs"
doc-scrape-examples = true

[package.metadata.example.client]
name = "client"
description = "A simple command line client that can control Bevy apps via the BRP"
category = "Remote Protocol"
wasm = true

[[example]]
name = "server"
path = "examples/remote/server.rs"
doc-scrape-examples = true

[package.metadata.example.server]
name = "server"
description = "A Bevy app that you can connect to with the BRP and edit"
category = "Remote Protocol"
wasm = true

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
